add trips hotels
