# internal/models/hotel.go
@@ -1,0 +1,20 @@
+package models
+
+import "time"
+
+type Hotel struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	City      string    `json:"city"`
+	Distance  float64   `json:"distance"`
+	Meals     string    `json:"meals"`
+	Rating    int       `json:"rating"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type TripHotel struct {
+	TripID  int `json:"trip_id"`
+	HotelID int `json:"hotel_id"`
+	Nights  int `json:"nights"`
+}
